--- a/locales/zh-cn/translation.json
+++ b/locales/zh-cn/translation.json
@@ -13,7 +13,7 @@
     "description": "H Hospitality Group是由有远见的企业家Henry创立的新兴管理公司，在爱妮岛（El Nido）巴拉望（Palawan）树立了行业标杆。在过去七年中，该地区的旅游业增长了惊人的 700%，集团不仅影响了这一增长，还自豪地拥有班车服务、旅行社和多家酒店，进一步巩固了其在行业中的地位。除了核心的酒店服务外，H Hospitality Group还经营多家餐厅和咖啡厅，提供多样化的用餐体验，展示了该地区丰富的风味。该集团还在扩大其投资组合，正在开发一家尖端的公寓式酒店，旨在重新定义爱妮岛的奢华生活。",
     "beachfrontHotels": "海滨酒店",
     "beachfrontRestaurants": "海滨餐厅",
-    "hotel": "酒店",
+    "hotel": "我们的酒店",
     "travelAndTour": "旅游和观光",
     "condominium": "公寓",
     "cafe": "咖啡厅",
