--- a/locales/zh-cn/translation.json
+++ b/locales/zh-cn/translation.json
@@ -3,7 +3,8 @@
     "about": "关于我们",
     "hotel": "我们的酒店",
     "timeline": "时间轴",
-    "contact": "联系我们"
+    "contact": "联系我们",
+    "investing": "投资"
   },
   "masthead": {
     "title": "H Hospitality Group",
@@ -41,7 +42,7 @@
     "description": "在 H Hospitality Group，我们的承诺不仅仅是提供卓越的酒店服务；它还延伸到对我们的社区和环境产生有意义的影响。自我们在爱妮岛巴拉望成立以来，我们一直坚定不移地致力于通过各种支持人民和保护地球的倡议来创造积极的变化。",
     "communitySupport": {
       "title": "社会支持",
-      "description": "H Hospitality Group拥有约300名员工，我们很开心能为约300个家庭的生计做出贡献。我们超过70%的员工是爱妮岛的当地人，展示了我们通过提供体面的工作和具有竞争力的薪酬福利来真诚支持社区的热情。我们相信，提供稳定的工作机会和培养性的工作环境对于建立一个繁荣的社区至关重要。我们的员工是我们成功的基石，他们的福祉是我们的首要任务。"
+      "description": "H Hospitality Group拥有约300名员工，目前是爱妮岛最大的酒店集团，我们很高兴能为约300个家庭的生计做出贡献。我们超过70%的员工是爱妮岛的当地人，展示了我们通过提供体面的工作和具有竞争力的薪酬福利来真诚支持社区的热情。我们相信，提供稳定的工作机会和培养性的工作环境对于建立一个繁荣的社区至关重要。我们的员工是我们成功的基石，他们的福祉是我们的首要任务。"
     },
     "turtleConservation": {
       "title": "海龟保护",
@@ -64,7 +65,10 @@
     "location": "地点",
     "locationValue": "菲律宾,爱妮岛",
     "phone": "电话",
-    "whatsapp": "WhatsApp"
+    "whatsapp": "WhatsApp",
+    "bussiness": "商业机会",
+    "office": "办公室",
+    "reservation": "预约电话"
   },
   "hotel": {
     "title": "我们的酒店",
@@ -84,56 +88,64 @@
     "nearestAirport": "最近的机场：",
     "pieceLio": {
       "name": "Piece Lio",
-      "description": "豪华的海滨度假村，提供令人惊叹的海景和世界级设施。",
+      "description": "Piece Lio 是爱妮岛上最舒适的酒店之一，与日本知名的 Piece 集团合作开发。Piece 集团在日本经营 10 家酒店，而 Piece Lio 提供 50 至 150 平方米的房间，相较于当地一般酒店 18 至 22 平方米的房型，为旅客带来更宽敞舒适的住宿体验。",
+      "shortDescription": "豪华的海滨度假村，提供令人惊叹的海景和世界级设施。",
       "location": "Lio Beach, El Nido, Palawan",
       "phone": "+63 917 123 4567",
       "website": "www.piecelio.com"
     },
     "nacpanBeachResort": {
       "name": "Nacpan Beach Resort",
-      "description": "在这个生态友好的度假村体验纳克潘海滩的美丽，非常适合自然爱好者。",
+      "description": "为了给不想住在帐篷旅馆的旅客更多选择，Nacpan Beach Resort 提供了更舒适的沙滩住宿体验，让客人享受私人卫浴设施，避免住在帐篷中厕所分离的不便。",
+      "shortDescription": "在这个生态友好的度假村体验纳克潘海滩的美丽，非常适合自然爱好者。",
       "location": "Nacpan Beach, El Nido, Palawan",
       "phone": "+63 917 234 5678",
       "website": "www.nacpanbeachresort.com"
     },
     "nacpanBeachGlamping": {
       "name": "Nacpan Beach Glamping",
-      "description": "享受独特的豪华露营体验，拥有酒店的所有舒适，就在海滩上。",
+      "description": "Nacpan Beach 是旅客认为在 Big Lagoon 和 Small Lagoon 之外必访的景点之一。我们在这片沙滩上开设了 Nacpan Beach Glamping，并种植了 300 棵树和 4000 株灌木。我们致力于环境保育，不仅没有破坏自然环境，还建立了海龟保育项目。",
+      "shortDescription": "享受独特的豪华露营体验，拥有酒店的所有舒适，就在海滩上。",
       "location": "Nacpan Beach, El Nido, Palawan",
       "phone": "+63 917 345 6789",
       "website": "www.nacpanbeachglamping.com"
     },
     "hHotelVeganHotel": {
-      "name": "H Hotel Vegan Hotel",
-      "description": "一家素食友好的酒店，提供植物性美食和环保意识的客房。",
+      "name": "H Hotel - Vegan Friendly Hotel",
+      "description": "H Hotel 是位于 El Nido 镇中心的酒店，拥有极佳的地理位置。酒店提供 Ver De 的纯素早餐，并在屋顶的 Piece of Sky 餐厅享受海景晚餐。目前，TripAdvisor 上排名前 3 的餐厅中有 2 家位于 H Hotel。",
+      "shortDescription": "一家素食友好的酒店，提供植物性美食和环保意识的客房。",
       "location": "El Nido Town Proper, Palawan",
       "phone": "+63 917 456 7890",
       "website": "www.hhotelveganhotel.com"
     },
     "jBoutiqueHotel": {
       "name": "J Boutique Hotel",
-      "description": "位于爱妮岛中心的时尚精品酒店，非常适合城市探险者。",
+      "description": "J Boutique Hotel 位于 El Nido 镇的边缘，步行 8 分钟即可到达沙滩。这间酒店适合背包客和小团体入住，提供经济实惠的价格，同时保有舒适与时尚的装修风格。",
+      "shortDescription": "位于爱妮岛中心的时尚精品酒店，非常适合城市探险者。",
       "location": "El Nido Town Center, Palawan",
       "phone": "+63 917 567 8901",
       "website": "www.jboutiquehotel.com"
     },
     "sResortElNido": {
       "name": "S Resort El Nido",
-      "description": "为休闲和商务旅客提供舒适和便利的现代度假村。",
+      "description": "位于 El Nido 镇上，邻近 H Hotel，拥有 44 间房间，周围 200 公尺内有超过 100 家餐厅与酒吧，非常适合团体旅行或情侶度假。酒店的顶楼设有 H&C 中餐厅，而一楼的 Grounded 咖啡厅则为您提供美味的早晨咖啡。",
+      "shortDescription": "为休闲和商务旅客提供舒适和便利的现代度假村。",
       "location": "Corong Corong, El Nido, Palawan",
       "phone": "+63 917 678 9012",
       "website": "www.sresortelnido.com"
     },
     "casaCecilia": {
-      "name": "Casa Cecilia",
-      "description": "位于爱妮岛中心的三星级住宿，提供舒适和便利。",
+      "name": "C Hotel (Casa Cecilia)",
+      "description": "C Hotel 以当地风格简约装修，专为预算有限的旅客设计，提供优越的地理位置和简单舒适的住宿环境。酒店距离沙滩仅 2 分钟步行路程。",
+      "shortDescription": "位于爱妮岛中心的三星级住宿，提供舒适和便利。",
       "location": "El Nido, Palawan",
       "phone": "+63 917 345 6789",
       "website": "www.casacecilia.com"
     },
     "nacpanBeachVillas": {
       "name": "Nacpan Beach Villas",
-      "description": "提供免费WiFi的豪华别墅，非常适合寻求浪漫度假的情侣。",
+      "description": "这是 Nacpan Beach 上我们最新的酒店投资，采用单栋别墅设计，虽然没有健身房或游泳池，但其位于沙滩正上方，提供天然海洋游泳池。房间设计由知名设计师 Justin 操刀，提供旅客一个舒适、奢华的住宿体验。",
+      "shortDescription": "提供免费WiFi的豪华别墅，非常适合寻求浪漫度假的情侣。",
       "location": "Near Nacpan Beach, El Nido, Palawan",
       "highlights": "免费WiFi、花园、露台、酒吧"
     },
@@ -151,16 +163,221 @@
   },
   "investing": {
     "title": "我们的投资",
-    "subtitle": "探索我们多元化的战略投资组合"
-  },
-  "restaurant": {
-    "3BrosFalafel": {
-      "name": "3 Bros Falafel",
-      "description": "一家充满活力的餐厅，专门提供墨西哥风格的卷饼，在爱妮岛提供独特的风味融合。"
+    "subtitle": "探索我们多元化的策略投资组合",
+
+    "tabs": {
+      "hotels": "酒店",
+      "restaurantsCafeBars": "餐厅、咖啡厅和酒吧",
+      "spaMassage": "水疗和按摩",
+      "travelTours": "旅游和观光"
     },
-    "verDeElNido": {
-      "name": "Ver De El Nido",
-      "description": "一家迷人的素食餐厅，在爱妮岛中心提供多样化的植物性菜单。"
+    "hotels": {
+      "introduction": "H Hospitality Group 致力于通过其多元化的酒店组合提供独特而舒适的住宿体验。我们的酒店战略性地位于爱妮岛的黄金地段，满足各类旅客的需求，同时促进环境保护和可持续发展。我们提供豪华体验，同时强调与当地文化和自然环境的和谐，为每位客人创造难忘的回忆。",
+      "pieceLio": {
+        "name": "Piece Lio",
+        "description": "爱妮岛最舒适的酒店之一，与日本知名的 Piece Group 合作开发。提供 50 到 150 平方米的宽敞客房，相比当地酒店典型的 18 到 22 平方米客房提供更舒适的住宿。",
+        "shortDescription": "与日本 Piece Group 合作的舒适酒店，提供宽敞客房。",
+        "rooms": "客房数：36",
+        "openingYear": "开业年份：2024",
+        "location": "位置：Lio 机场区域（Ayala Lio）"
+      },
+      "hHotelVeganHotel": {
+        "name": "H Hotel - 素食友好酒店",
+        "description": "位于爱妮岛镇中心，地理位置优越。提供 Ver De 的素食早餐和屋顶 Piece of Sky 餐厅的海景晚餐。TripAdvisor 排名前三的两家餐厅都位于 H Hotel。",
+        "shortDescription": "位于镇中心的素食友好酒店，拥有顶级餐厅。",
+        "rooms": "客房数：41",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "nacpanBeachGlamping": {
+        "name": "纳克潘海滩豪华露营",
+        "description": "位于纳克潘海滩，是继大小泻湖后必访之地。我们种植了 300 棵树和 4000 株灌木，专注于环境保护并建立了海龟保护项目。",
+        "shortDescription": "纳克潘海滩豪华露营，注重环境保护。",
+        "rooms": "客房数：18",
+        "openingYear": "开业年份：2023",
+        "location": "位置：纳克潘海滩"
+      },
+      "nacpanBeachResort": {
+        "name": "纳克潘海滩度假村",
+        "description": "为不喜欢住帐篷的旅客提供更舒适的海滩住宿体验。客人可以享受私人浴室设施，避免帐篷中独立厕所的不便。",
+        "shortDescription": "纳克潘海滩舒适度假村，提供私人浴室。",
+        "rooms": "客房数：26",
+        "openingYear": "开业年份：2023",
+        "location": "位置：纳克潘海滩"
+      },
+      "nacpanBeachVillas": {
+        "name": "纳克潘海滩别墅",
+        "description": "我们在纳克潘海滩的最新酒店投资，采用独立别墅设计。虽然没有健身房或游泳池，但位于海滩正上方，提供天然的海洋游泳池。由知名设计师 Justin 设计的房间提供舒适豪华的体验。",
+        "shortDescription": "纳克潘海滩独立别墅，靠近海滩，设计豪华。",
+        "rooms": "客房数：14",
+        "openingYear": "开业年份：2024",
+        "location": "位置：纳克潘海滩"
+      },
+      "sResortElNido": {
+        "name": "S Resort 爱妮岛",
+        "description": "位于爱妮岛镇，靠近 H Hotel，拥有 44 间客房。200 米范围内有超过 100 家餐厅和酒吧，非常适合团体旅行或情侣度假。屋顶设有 H&C 中餐厅，一楼设有 Grounded 咖啡厅，提供美味的早晨咖啡。",
+        "shortDescription": "位于镇中心的度假村，周边餐饮丰富，适合各类旅客。",
+        "rooms": "客房数：44",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "jBoutiqueHotel": {
+        "name": "J 精品酒店",
+        "description": "位于爱妮岛镇边缘，步行 8 分钟即可到达海滩。适合背包客和小型团体，提供实惠的价格，同时保持舒适时尚的装饰。",
+        "shortDescription": "实惠的精品酒店，靠近海滩，适合背包客。",
+        "rooms": "客房数：14",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "cHotel": {
+        "name": "C Hotel（Casa Cecilia）",
+        "description": "以简单的当地风格装饰，为预算有限的旅客设计。提供优越的位置和简单舒适的住宿。距离海滩仅 2 分钟步行路程。",
+        "shortDescription": "简单舒适的经济型酒店，靠近海滩。",
+        "rooms": "客房数：20",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "zGardenHotel": {
+        "name": "Z Garden Hotel",
+        "description": "我们最新的酒店开发项目，计划于 2025 年开业，位于爱妮岛港口旁。酒店客房分为海景和花园景观，为旅客提供多样化的住宿选择。",
+        "shortDescription": "即将开业的新酒店，提供海景和花园景观客房。",
+        "rooms": "客房数：30",
+        "openingYear": "开业年份：2025",
+        "location": "位置：爱妮岛镇中心"
+      }
+    },
+    "restaurantsCafeBars": {
+      "introduction": "H Hospitality Group 的餐饮组合在爱妮岛提供多样化的美食体验。从素食美食到正宗的亚洲料理，我们的餐厅满足各种口味和偏好。我们以使用新鲜的当地食材为荣，并创造独特的用餐氛围，与爱妮岛的自然美景相得益彰。",
+      "pieceOfSky": {
+        "name": "Piece of Sky",
+        "description": "一家屋顶餐厅，提供令人惊叹的海景和亚洲与西方融合料理。非常适合浪漫晚餐或欣赏日落时品尝鸡尾酒。",
+        "shortDescription": "屋顶餐厅，海景融合料理，适合浪漫晚餐。",
+        "seats": "座位数：65",
+        "openingYear": "开业年份：2023",
+        "location": "位置：H Hotel 屋顶，爱妮岛镇中心"
+      },
+      "hAndC": {
+        "name": "H&C",
+        "description": "正宗的中国料理餐厅，专门提供粤菜和川菜。深受中国游客和当地人喜爱。",
+        "shortDescription": "正宗中国料理，粤菜川菜，受欢迎。",
+        "seats": "座位数：50",
+        "openingYear": "开业年份：2023",
+        "location": "位置：S Resort 屋顶，爱妮岛镇中心"
+      },
+      "threeBrosFalafel": {
+        "name": "3 Bros Falafel",
+        "description": "受中东启发的餐厅，以美味的沙威玛和炸豆丸闻名。快速美味餐点的热门地点。",
+        "shortDescription": "中东风味，沙威玛炸豆丸，快餐热门。",
+        "seats": "座位数：30",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "groundedCoffee": {
+        "name": "Grounded Coffee",
+        "description": "专业咖啡店，提供高品质、可持续采购的咖啡。咖啡爱好者和数字游牧族的完美去处。",
+        "shortDescription": "专业咖啡，高品质可持续，适合咖啡爱好者。",
+        "seats": "座位数：18",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "janeCoffee": {
+        "name": "Jane Coffee",
+        "description": "H Hospitality Group 最新投资，专注于高端手冲咖啡体验。专业咖啡师为品味独特的咖啡爱好者提供 1-2 小时的精致咖啡体验。",
+        "shortDescription": "高端手冲咖啡，专业体验，1-2小时精致服务。",
+        "seats": "座位数：15",
+        "openingYear": "开业年份：2025",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "lechonCo": {
+        "name": "Lechon Co by H Hospitality Group",
+        "description": "与宿雾的烹饪大师合作，提供著名的烤乳猪。必尝的传统菲律宾菜肴，位于 H Hotel 对面。",
+        "shortDescription": "宿雾烤乳猪，传统菲律宾美食。",
+        "seats": "座位数：8",
+        "openingYear": "开业年份：2025",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "verDeElNido": {
+        "name": "Ver De El Nido",
+        "description": "爱妮岛首家全素食餐厅，由美国和菲律宾知名厨师共同创立。特色包括 6 米高的玻璃窗、空调和 Beyond Meat 产品。在 TripAdvisor 排名前三。",
+        "shortDescription": "全素食餐厅，知名厨师创立，TripAdvisor前三。",
+        "seats": "座位数：65",
+        "openingYear": "开业年份：2025",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "sunmaiNacpanBeach": {
+        "name": "金色三麦",
+        "description": "一家台湾精酿啤酒吧，提供多种独特的啤酒。适合想要探索新口味的啤酒爱好者。",
+        "shortDescription": "台湾精酿啤酒吧，多种独特啤酒。",
+        "seats": "座位数：40",
+        "openingYear": "开业年份：2024",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "hAndCChinese": {
+        "name": "H&C 中餐厅",
+        "description": "一家正宗的中国餐厅，专门提供来自中国各地的传统菜肴。深受当地人和游客欢迎。",
+        "shortDescription": "正宗中国餐厅，传统菜肴，受欢迎。",
+        "seats": "座位数：60",
+        "openingYear": "开业年份：2024",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "unocha": {
+        "name": "Unocha",
+        "description": "一家受日本启发的茶馆，提供宁静的氛围和各种高品质茶饮和轻食。",
+        "shortDescription": "日式茶馆，宁静氛围，高品质茶饮。",
+        "seats": "座位数：25",
+        "openingYear": "开业年份：2024",
+        "location": "位置：爱妮岛镇中心"
+      },
+      "3BrosFalafel": {
+        "name": "3 Bros Falafel",
+        "description": "一家充满活力的餐厅，专门提供墨西哥风格的卷饼，在爱妮岛提供独特的风味融合。",
+        "shortDescription": "墨西哥风格卷饼，独特风味融合。",
+        "seats": "座位数：35",
+        "openingYear": "开业年份：2023",
+        "location": "位置：爱妮岛镇中心"
+      }
+    },
+    "spa": {
+      "title": "水疗",
+      "introduction": "H Hospitality Group 的东方水疗系列为旅客提供极致的放松和恢复体验。我们的水疗场所设计精美，结合现代美学与东方疗法。无论您是造访 H Hotel 的东方水疗 1 还是新开业的东方水疗 2，您都会发现舒适的环境和专业的治疗服务。在探索爱妮岛美丽风景后或寻求宁静放松时刻，我们的水疗设施是您理想的疗愈目的地。",
+      "orientalSpa1": {
+        "name": "东方水疗 1",
+        "description": "位于 H Hotel 一楼的东方水疗 1 是爱妮岛最受欢迎的按摩店，在 Google Maps 上拥有最多正面评价。这家水疗以高品质服务和舒适环境闻名，是爱妮岛旅客必访的放松场所。由于需求量大，建议客人提前预约以确保能享受优质的按摩体验。",
+        "seats": "座位数：13",
+        "openingYear": "开业年份：2023",
+        "location": "位置：H Hotel，爱妮岛"
+      },
+      "orientalSpa2": {
+        "name": "东方水疗 2",
+        "description": "东方水疗 2 是爱妮岛最新的豪华健康水疗中心，拥有 40 个按摩站，为旅客提供宽敞私密的舒适环境。这座独立建筑由知名设计师 Justin 精心设计，结合现代设计与传统东方疗法，为客人提供身心极致放松体验。造访爱妮岛时，这家新开业的水疗中心是不容错过的健康享受。",
+        "seats": "座位数：40",
+        "openingYear": "开业年份：2025",
+        "location": "位置：J Boutique Hotel 旁，爱妮岛"
+      }
+    },
+    "travel": {
+      "title": "旅游与观光",
+      "introduction": "H Hospitality Group 通过与顶级当地旅游公司如 Discover El Nido 的合作，提供全面的旅游和活动服务。我们的服务范围从专业导览、舒适交通、婚礼策划到独特的市集体验，满足不同旅客的需求。无论您是探索爱妮岛的美景，还是在纳克潘海滩策划浪漫婚礼，H Hospitality Group 都致力于提供无与伦比的体验。我们理解每次旅程都是独一无二的，并努力为每位旅客创造美好回忆。",
+      "discoverElNido": {
+        "name": "Discover El Nido",
+        "description": "爱妮岛评分最高的旅游公司，获得 TripAdvisor 认证，与 H Hospitality Group 密切合作。拥有 9 艘船和专业导游服务，是探索爱妮岛自然美景的首选。"
+      },
+      "elNidoGO": {
+        "name": "El Nido GO",
+        "description": "为中国游客提供一站式服务的旅行社，处理从机票到行程的所有事宜。适合不太熟悉英语或行程规划的游客。"
+      },
+      "nacpanBeachShuttle": {
+        "name": "纳克潘海滩接驳车",
+        "description": "前往纳克潘海滩的经济实惠接驳服务。空调车辆，往返 15 美元。"
+      },
+      "nacpanBeachWedding": {
+        "name": "纳克潘海滩婚礼",
+        "description": "专门在纳克潘海滩安排梦幻海滩婚礼。提供从场地布置到活动策划的全面服务，确保每个细节都完美无缺。"
+      },
+      "nacpanSunsetMarket": {
+        "name": "纳克潘日落市集",
+        "description": "受台湾著名夜市启发，这个海滨市集提供各种美食和手工艺品，让游客在欣赏日落美景的同时体验当地文化。"
+      }
     }
   },
   "travel": {
